samples/_failures_safe/1761541833_ea4f9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f331f130.c: In function ‘pointcloud_compute_bounds’:
./samples/SAFE/__tmp_f331f130.c:125:51: error: expected ‘;’ at end of input
  125 |         if (pc->points[i].x < bounds.min.x) bounds
      |                                                   ^
      |                                                   ;
./samples/SAFE/__tmp_f331f130.c:125:9: error: expected declaration or statement at end of input
  125 |         if (pc->points[i].x < bounds.min.x) bounds
      |         ^~
./samples/SAFE/__tmp_f331f130.c:125:9: error: expected declaration or statement at end of input
